include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIR})
protobuf_generate_cpp(PROTO_SRC PROTO_HEADER recorder.proto)
set(CMAKE_CXX_FLAGS "-fPIC")
add_library(proto STATIC ${PROTO_HEADER} ${PROTO_SRC})
set(PROTOBUF_LIBRARY "${PROTOBUF_LIBRARY}" PARENT_SCOPE)
set(PROTOBUF_INCLUDE_DIR "${PROTOBUF_INCLUDE_DIR}" PARENT_SCOPE)
